--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ ul, li {
     flex-wrap: wrap;
 }
 
-.pd-nav {
+.padding-nav {
     padding: 20px;
 }
 
@@ -133,6 +133,12 @@ ul, li {
 .container-cards {
     max-width: 900px;
     margin-top: 100px;
+    padding: 80px 0;
+    margin-bottom: 200px;
+}
+
+.row > [class^='col'] {
+	padding: 20px;
 }
 
 .card-border {
@@ -143,6 +149,7 @@ ul, li {
 .card-header {
     border-bottom: 1px grey solid;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .card-body {
@@ -170,6 +177,7 @@ ul, li {
     margin-bottom: 50px;
 }
 
-.card-list2 {
-    margin-bottom: 50px;
+.row-team {
+    justify-content: space-between;
 }
+
