--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,11 @@ ul, li {
     margin-top: 40px;
 }
 
+.card-padding{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .col-12 {
     flex-basis: calc((100% / 12) * 12);
 }
@@ -134,7 +139,7 @@ ul, li {
     max-width: 900px;
     margin-top: 100px;
     padding: 80px 0;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
 }
 
 .row > [class^='col'] {
@@ -181,3 +186,15 @@ ul, li {
     justify-content: space-between;
 }
 
+.title-contact {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+img {
+    width: 100%;
+}
+
+.text {
+    margin-bottom: 10px;
+}
